syntax = "proto3";

option csharp_namespace = "ErrorHandleSidecar.Protos";

package errorhandler;

service ErrorHandler {
	rpc GetErrorResponse(ErrorRequest) returns (ErrorResponse);
}

message ErrorRequest {
	string errorCode = 1;
}

message ErrorResponse {
	string name = 1;
	string errorMessage = 2;
	bool canRetry =3;
	int32 noOfRetries = 4;
	string time = 5;
	string requestId = 6;
	string errorCode = 7;
}